# mirror

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: mirror.py
app/exceptions/: __init__.py  exceptions.py
app/middleware/: __init__.py  auth.py  state.py
app/tools/: __init__.py  limited_size_dict.py
lib_logging/: __init__.py  configs.py  enums.py  formatters.py  src.py  utils.py
templates/: home.html
