[tool.pdm]
[project]
name = "mirror"
version = "0.0.1"
description = "Сервис-зеркало"
authors = [
    {name = "EX", email = "ex.codding@gmail.com"},
]
dependencies = [
    "pydantic==2.1.1",
    "pydantic-settings==2.0.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "Jinja2==3.1.6",
    "toml==0.10.2",
    "python-json-logger==2.0.7",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "isort==5.12.0",
    "pytest==7.3.1",
    "blue==0.9.1",
    "Flake8-pyproject==0.9.1",
    "pytest-asyncio==0.21.0",
    "pytest-cov==4.0.0",
    "pre-commit>=3.3.3",
]

[tool.pdm.scripts]
_.env_file = ".env"
pytest = "pytest"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.blue]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
ignore = ["W291", "E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    ".venv",
    "venv",
    "__pypackages__"
]
max-line-length = 120
count = true
per-file-ignores = "__init__.py: F401"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pdm.resolution]
respect-source-order = true
